force-app/main/default/objects/Graph__c/Graph__c.object-meta.xml
<CustomObject>
    <label>Graph</label>
    <nameField>
        <label>Graph Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>graphs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>