force-app/main/default/objects/Graph__c/fields/Pointer__c.field-meta.xml
<CustomField>
    <fullName>Pointer__c</fullName>
    <label>Pointer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>