force-app/main/default/objects/Graph__c/fields/Target_date__c.field-meta.xml
<CustomField>
    <fullName>Target_date__c</fullName>
    <label>Target date</label>
    <type>Date</type>
</CustomField>