force-app/main/default/objects/Graph__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Pointer__c</columns>
    <columns>Target_date__c</columns>
    <columns>type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>